--- a/src/css/cta.less
+++ b/src/css/cta.less
@@ -22,7 +22,7 @@
 		padding: 15px;
 		padding-left: 30px;
 		padding-right: 30px;
-		width: 16em;
+		width: 14.5em;
 	}
 	.btn-white {
 		background-color: @white-lt;
@@ -31,6 +31,14 @@
 	.btn-black {
 		background-color: @blk;
 		color: @white-lt;
+	}
+	.hometimetable {
+		margin-right: 0;
+		margin-bottom: @spacer-20;
+		@media (min-width: @screen-sm) {
+			margin-right: @spacer-20;
+			margin-bottom: 0;
+		}
 	}
 }
 
