--- a/src/html/layouts/styles.hbs
+++ b/src/html/layouts/styles.hbs
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col-md-4 side black">
                     <h3>Come train with us <br><span>Your first week is free!</span></h3>
-                    {{> form button="Get your free trial!"}}
+                    {{> form trial=true button="Get your free trial!"}}
                 </div>
             </div>
         </div>
