--- a/src/html/pages/about.hbs
+++ b/src/html/pages/about.hbs
@@ -8,14 +8,13 @@ pageid: "about"
         <div class="row">
             <div class="col-md-12">
                 <h2>Meet the team</h2>
-                <p>Movement Martial Arts is run by three BJJ black belts and Muay Thai experts.<br>Find out more about Andrew, Billy and Wade below.</p>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4">
                 <div class="img">
-                    <h3><span>Andrew Husmann</span></h3>
                     <p class="text-center"><img src="img/team-andrew.jpg" class="img-responsive"></p>
+                    <h3>Andrew Husmann</h3>
                 </div>
                 <p>Andrew is an experienced and certified coach who has spent many years coaching world class competitors in both childrens and adults Brazilian Jiu Jitsu (BJJ), Muay Thai Kickboxing and MMA.</p>
                 <p>He is a black belt in BJJ, holds both Pan Pacific and National titles, and has competed at the World Championships on numerous occasions.</p>
@@ -23,8 +22,8 @@ pageid: "about"
             </div>
             <div class="col-md-4">
                 <div class="img">
-                    <h3>Billy<br>Sam</h3>
                     <p class="text-center"><img src="img/team-billy.jpg" class="img-responsive"></p>
+                    <h3>Billy Sam</h3>
                 </div>
                 <p>Billy is an experienced and certified coach, most recently coaching kids and adults in Jiu Jitsu and Adults Muay Thai Kickboxing.</p>
                 <p>He holds a Bachelor's Degree in Exercise and Sports Science, and Certificate 3 and 4 in Fitness.</p>
@@ -32,8 +31,8 @@ pageid: "about"
             </div>
             <div class="col-md-4">
                 <div class="img">
-                    <h3>Wade<br>Huang</h3>
                     <p class="text-center"><img src="img/team-wade.jpg" class="img-responsive"></p>
+                    <h3>Wade Huang</h3>
                 </div>
                 <p>Wade is an experienced and certified coach, teaching BJJ and Muay Thai Kickboxing classes at Movement Martial Arts.</p>
                 <p>He is a reformed nine-to-fiver who has found his passion in Jiu Jitsu.</p>
