--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -85,14 +85,14 @@ pageid: "home"
             </a>
         </div>
     </div>
-</section>come and try out our classes for a week, free of charge!
+</section>
 <section class="cta">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
                 <h2>One week free trial</h2>
                 <p>Come and try out our classes for a week, free of charge!</p>
-                <a href="timetable.html" class="btn btn-white">See timetable</a>
+                <a href="timetable.html" class="btn btn-white hometimetable">See timetable</a>
                 <a href="freetrial.html" class="btn btn-black">Book me in!</a>
             </div>
         </div>
