--- a/src/html/pages/muaythai.hbs
+++ b/src/html/pages/muaythai.hbs
@@ -9,7 +9,7 @@ type: "muaythai"
 	<p><strong>Muay Thai is a style of kickboxing that originates from Thailand and uses the whole body. It is referred to as the art of 8 limbs, incorporating hands, elbows, feet, knees and grappling into a comprehensive and effective striking based martial art. It is a great cardiovascular workout, effective for self-defence and is a dominant striking style to train for competitive kickboxing and MMA.</strong></p> 
 	<p>Our Muay Thai kickboxing classes teach effective fighting techniques and also provides students with a challenging workout. We cater to new beginners at all fitness levels, right through to advanced students competing professionally. Our Muay Thai program allows us to teach students techniques when they are ready to integrate more into their repertoire, and empowers our students to progress at a pace that suits them.
 	Once students reach intermediate classes we teach full contact sparring, which is carefully monitored to ensure our students safety and skill development.</p>
-	<p>Our Muay Thai head instructors are super experienced, with extensive knowledge and passion to pass on their expertise to the students.</p>
+	<p>Our Muay Thai head instructors are highly experienced, with extensive knowledge and passion to pass on their expertise to the students.</p>
 	<p>Whether you’re looking to improve your fitness, your confidence, meet new people, learn a new skill or fight professionally our classes are for you!</p>
 </div>
 <div class="hidden-lg hidden-md">
