--- a/src/html/pages/timetable.hbs
+++ b/src/html/pages/timetable.hbs
@@ -22,7 +22,7 @@ pageid: "timetable"
                             <a href="#bjj" data-toggle="tab" data-height="true" aria-controls="bjj" role="tab">BJJ</a>
                         </li>
                         <li role="presentation">
-                            <a href="#mt" data-toggle="tab" data-height="true" aria-controls="mt" role="tab">MT</a>
+                            <a href="#mt" data-toggle="tab" data-height="true" aria-controls="mt" role="tab">Muay Thai</a>
                         </li>
                         <li role="presentation">
                             <a href="#mma" data-toggle="tab" data-height="true" aria-controls="mma" role="tab">MMA</a>
@@ -326,9 +326,9 @@ pageid: "timetable"
                                             <td></td>
                                             <td></td>
                                             <td></td>
+                                            <td></td>
                                             <td class="class-active">MMA
                                                 <br>Invitation Only</td>
-                                            <td></td>
                                             <td></td>
                                             <td></td>
                                         </tr>
