--- a/src/html/partials/global-nav.hbs
+++ b/src/html/partials/global-nav.hbs
@@ -9,8 +9,8 @@
         <a href="/" class="navbar-left logo hidden-sm"><img src="img/logo-nav.png"></a>
         <ul class="nav navbar-nav navbar-right navbar-social">
             <!-- TO-DO popovers for icons? -->
-            <li class="hidden-md hidden-sm hidden-xs"><a href="https://www.facebook.com/movementmartialartsaustralia/"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
-            <li class="hidden-md hidden-sm hidden-xs"><a href="https://www.instagram.com/movementmartialarts/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li class="hidden-md hidden-sm hidden-xs"><a href="https://www.facebook.com/movementmartialartsaustralia/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+            <li class="hidden-md hidden-sm hidden-xs"><a href="https://www.instagram.com/movementmartialarts/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
             <li class="visible-xs-block"><a href="tel:(02) 9887 1230"><i class="glyphicon glyphicon-phone-alt"></i>
             </a></li>
             <li class="hidden-xs"><a href="#phonenumber" class="js-smooth-link"><i class="glyphicon glyphicon-phone-alt"></i></a></li>
