--- a/src/css/about.less
+++ b/src/css/about.less
@@ -1,6 +1,7 @@
 /* About */
 
 body.about {
+  padding-top: 8em;
   section {
     padding-bottom: @spacer-50;
     h3,
@@ -19,14 +20,20 @@ body.about {
       font-size: 1.6em;
     }
     .img {
-      position: relative;
+      padding-bottom: @spacer-20;
       h3 {
-        position: absolute;
-        bottom: -0.6em;
-        left: 0.4em;
-        -webkit-text-fill-color: @white-lt;
-        -webkit-text-stroke-width: 2px;
-        -webkit-text-stroke-color: black;
+        color: @blk;
+        text-transform: uppercase;
+        font-size: 1.7em;
+        font-weight: 900;
+        letter-spacing: 2px;
+        display: inline-block;
+        padding-top: @spacer-10;
+        padding-bottom: @spacer-10;
+        background-color: @yell-lt;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 0;
       }
     }
     .panel {
@@ -80,7 +87,7 @@ body.about {
     padding-top: @spacer-50;
   }
   @media (max-width: @screen-sm) {
-    padding-top: 5em;
+    padding-top: 6em;
   }
   @media (min-width: @screen-sm) and (max-width: @screen-md) {
     padding-top: 10em;
