--- a/src/css/introstyles.less
+++ b/src/css/introstyles.less
@@ -5,22 +5,18 @@
 	padding-top: @spacer-100;
 	padding-bottom: @spacer-50;
 	h3 {
-		color: @white-lt;
+		color: @blk;
 		text-transform: uppercase;
-		font-size: 2em;
+		font-size: 1.7em;
 		font-weight: 900;
 		letter-spacing: 2px;
 		display: inline-block;
-		max-width: 56%;
-		// text-shadow: @white-lt 0 0 20px;
-		padding-top: @spacer-30;
-		padding-left: @spacer-30;
-		position: absolute;
-		span {
-			-webkit-text-fill-color: @white-lt;
-			-webkit-text-stroke-width: 2px;
-			-webkit-text-stroke-color: black;
-		}
+		padding-top: @spacer-10;
+		padding-bottom: @spacer-10;
+		background-color: @yell-lt;
+		width: 100%;
+		text-align: center;
+		margin-bottom: 0;
 	}
 	.btn {
 		position: absolute;
