--- a/src/css/nav.less
+++ b/src/css/nav.less
@@ -19,6 +19,9 @@
 .navbar-fixed-top .navbar-collapse,
 .navbar-fixed-bottom .navbar-collapse {
   max-height: none;
+  @media (max-width: @screen-sm) {
+    margin-top: @spacer-10;
+  }
 }
 
 .navbar-inverse .navbar-brand {
@@ -46,6 +49,9 @@
     @media (max-width: @screen-sm) {
       padding-left: 5%;
     }
+  }
+  .navbar-toggle {
+    margin-top: 15px;
   }
 }
 
@@ -132,7 +138,7 @@
 @media (max-width: @screen-sm) {
   .navbar-social {
     right: 75px;
-    top: 3px;
+    top: 10px;
   }
 }
 
