--- a/src/html/pages/contact.hbs
+++ b/src/html/pages/contact.hbs
@@ -13,7 +13,7 @@ pageid: "contact"
             <div class="row">
                 <div class="col-md-7">
                     <h2>Movement Martial Arts</h2>
-                    <p><strong>Building 1,<br>35 Waterloo Road,<br>Macquarie Park 2113</strong></p>
+                    <p><strong>Building 1,<br>35 Waterloo Road,<br>Macquarie Park 2113,<br>Sydney</strong></p>
                     <p class="big"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:0298871230" class="hidden-md hidden-lg">(02) 9887 1230</a><span class="hidden-xs hidden-sm">(02) 9887 1230</span></p>
                     <p class="big"><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@movementmartialarts.com.au">info@movementmartialarts.com.au</a></p>
                 </div>
