--- a/src/css/contact.less
+++ b/src/css/contact.less
@@ -23,6 +23,10 @@ body.contact {
 		a,
 		p {
 			color: @white-lt;
+			&.bg-danger,
+			&.bg-success {
+				color: @blk;
+			}
 		}
 		ul {
 			list-style-type: none;
