--- a/src/html/partials/form.hbs
+++ b/src/html/partials/form.hbs
@@ -1,11 +1,11 @@
-<form method="POST">
+<form id="contactform" method="post">
     <input type="text" class="form-control" placeholder="Name" name="name" id="name" required data-value-missing="Translate('Please enter your name')">
     <input type="email" class="form-control" placeholder="Email address" name="email" id="email" required data-validation-required-message="Please enter your email.">
     <span class="error" aria-live="polite"></span>
     <input type="text" class="form-control" placeholder="Phone number" name="phone" id="phone" required data-validation-required-message="Please enter your phone number.">
     {{#if trial}}
-    <select name="enquiry" id="enquiry">
-        <option selected disabled>I'm interested in</option>
+    <select class="form-control" name="enquiry" id="enquiry">
+        <option disabled="disabled">I'm interested in</option>
         <option value="bjj">BJJ</option>
         <option value="muaythai">Muay Thai</option>
         <option value="mma">MMA</option>
@@ -13,7 +13,7 @@
     </select>
     {{/if}}
     {{#if contact}}
-    <textarea name="textarea" id="message">Type your message here</textarea>
+    <textarea name="message" id="message" placeholder="Type your message here"></textarea>
     {{/if}}
     <button type="submit" class="btn">{{button}}</button>
 </form>
