--- a/src/css/about.less
+++ b/src/css/about.less
@@ -42,6 +42,7 @@ body.about {
       border-radius: 0;
     }
     .threec {
+      text-transform: none;
       margin-bottom: @spacer-40;
     }
   }
