--- a/src/html/pages/about.hbs
+++ b/src/html/pages/about.hbs
@@ -53,7 +53,7 @@ pageid: "about"
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="threec">We focus on 3 Cs:</h3>
+                <h3 class="threec">WE FOCUS ON 3 C's:</h3>
             </div>
         </div>
         <div class="row row-flex row-flex-wrap focus">
