--- a/src/html/layouts/default.hbs
+++ b/src/html/layouts/default.hbs
@@ -16,10 +16,23 @@
         {{> footer }}
         <!--footer end-->
 
-		<!-- Modals - placed here to avoid position relative weirdness -->
-		{{> modals}}
+        <!-- Modals - placed here to avoid position relative weirdness -->
+        {{> modals}}
         <script src="libs/js/libs.js"></script>
         <!--script src="js/script.js"></script-->
         <script src="js/script.js"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-72802688-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-72802688-1');
+        </script>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF6W233"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+            <!-- End Google Tag Manager (noscript) -->
     </body>
 </html>
