--- a/src/html/partials/head.hbs
+++ b/src/html/partials/head.hbs
@@ -1,16 +1,23 @@
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        {{> meta default-meta}}
-        <title>{{title}}</title>
-        <!-- inject style -->
-        <link href="libs/css/libs.css" rel="stylesheet" type="text/css" media="screen">
-        <link href="css/styles.css" rel="stylesheet" type="text/css" media="screen">
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      {{> meta default-meta}}
+      <title>{{title}}</title>
+      <!-- inject style -->
+      <link href="libs/css/libs.css" rel="stylesheet" type="text/css" media="screen">
+      <link href="css/styles.css" rel="stylesheet" type="text/css" media="screen">
+      <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-          <![endif]-->
-      </head>
+        <![endif]-->
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-NF6W233');</script>
+      <!-- End Google Tag Manager -->
+    </head>
