Updated kids timetable

--- a/src/html/pages/timetable.hbs
+++ b/src/html/pages/timetable.hbs
@@ -365,6 +365,17 @@ pageid: "timetable"
                                     </thead>
                                     <tbody>
                                         <tr>
+                                            <td>4:30PM
+                                                <br>5:15PM</td>
+                                            <td class="class-active">Kids<br>Muay Thai</td>
+                                            <td></td>
+                                            <td class="class-active">Kids<br>Muay Thai</td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
                                             <td>5:00PM
                                                 <br>6:00PM</td>
                                             <td></td>
