Updated kids photos

--- a/src/html/pages/kids.hbs
+++ b/src/html/pages/kids.hbs
@@ -40,7 +40,7 @@ type: "kids"
 	<div class="col-md-6 col-sm-12">
 		<ul class="basic"> 
 			<li>Be bully proof!</li>
-			<li>Learn from accredited coaches with complete working with children checks</li>
+			<li>Accredited coaches with complete working-with- children certification</li>
 			<li>Develop discipline, confidence, self esteem and respect</li>
 		</ul>
 	</div>
