Style changes. Privacy link added to footer

--- a/src/html/partials/footer.hbs
+++ b/src/html/partials/footer.hbs
@@ -8,6 +8,7 @@
                 <p><a href="https://goo.gl/maps/4QRiiYNMZaw" target="_blank">Building 1, 35 Waterloo Road, Macquarie Park 2113,<br>Sydney</a></p>
                 <p><a href="" data-toggle="modal" data-target="#sizzle">Get directions</a></p>
                 <p id="phonenumber">(02) 9887 1230</p>
+                <p><a href="privacypolicy.html">Privacy Policy</a></p>
             </div>
             <div class="col-md-3">
                 <h3>Follow Us</h3>
