Changed faq copy

--- a/src/html/pages/faq.hbs
+++ b/src/html/pages/faq.hbs
@@ -38,8 +38,7 @@ pageid: "faq"
                 </p>
 
                 <p><strong>What age does my child need to be to participate in the kids classes?</strong>
-                    <br>We offer Brazilian Jiu Jitsu classes for children aged 5 - 14 years old. When they reach 14 years of age or over they may participate in the adult's Brazilian Jiu Jitsu classes.
-                <p>We currently do not offer children's Muay Thai Kickboxing classes. If your child is aged 14 or over they may participate in adult's Muay Thai Kickboxing classes.</p>
+                    <br>We offer Brazilian Jiu Jitsu classes and Muay Thai for children aged 5 - 14 years old. When they reach 14 years of age or over they may participate in the adult's Brazilian Jiu Jitsu classes.
                 <p>If you are under 18 years of age please bring a parent or guardian when you come to your first class as they will need to sign a consent form.
                 </p>
                 </div>
