--- a/src/html/pages/faq.hbs
+++ b/src/html/pages/faq.hbs
@@ -38,7 +38,7 @@ pageid: "faq"
                 </p>
 
                 <p><strong>What age does my child need to be to participate in the kids classes?</strong>
-                    <br>We offer Brazilian Jiu Jitsu classes and Muay Thai for children aged 5 - 14 years old. When they reach 14 years of age or over they may participate in the adult's Brazilian Jiu Jitsu classes.
+                    <br>We offer classes in Brazilian Jiu Jitsu and Muay Thai Kickboxing for children aged 5 years and above. When they reach 14 years of age or over they may participate in our adult classes.
                 <p>If you are under 18 years of age please bring a parent or guardian when you come to your first class as they will need to sign a consent form.
                 </p>
                 </div>
