wade did his first change to timetable

--- a/src/html/pages/timetable.hbs
+++ b/src/html/pages/timetable.hbs
@@ -48,6 +48,20 @@ pageid: "timetable"
                                         </tr>
                                     </thead>
                                     <tbody>
+                                     <tr>
+                                        <td>6:30AM
+                                            <br>7:30PM
+                                        </td>
+                                        <td></td>
+                                        <td></td>
+                                        <td class="class-active">BJJ
+                                            <br>All Levels
+                                        </td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
                                     <tr>
                                         <td>10:00AM
                                             <br>11:00PM
@@ -183,6 +197,19 @@ pageid: "timetable"
                                         </tr>
                                     </thead>
                                     <tbody>
+                                         <tr>
+                                            <td>6:30AM
+                                                <br>7:30AM
+                                                </td>
+                                            <td></td>
+                                            <td class="class-active">Muay Thai
+                                                <br>All Levels</td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
                                         <tr>
                                             <td>10:00AM
                                                 <br>11:00AM
