added morning classes

--- a/src/html/pages/timetable.hbs
+++ b/src/html/pages/timetable.hbs
@@ -57,8 +57,22 @@ pageid: "timetable"
                                             <th>Sat</th>
                                             <th>Sun</th>
                                         </tr>
-                                    </thead>
-                                    <tbody>
+                                        </thead>
+                                        <tbody>             
+                                        <tr>
+                                            <td>6:30AM
+                                                <br>7:30AM
+                                            </td>
+                                            <td></td>
+                                            <td></td>
+                                            <td class="class-active">BJJ
+                                                <br>All Levels
+                                            </td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
                                         <tr>
                                             <td>10:00AM
                                                 <br>11:00PM
@@ -194,6 +208,19 @@ pageid: "timetable"
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        <tr>
+                                            <td>6:30AM
+                                                <br>7:30AM
+                                            </td>
+                                            <td></td>
+                                            <td class="class-active">Muay Thai
+                                                <br>All Levels</td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
                                         <tr>
                                             <td>10:00AM
                                                 <br>11:00AM
